--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -152,3 +152,23 @@
   padding: 1.5rem;
   border-radius: .5rem;margin-bottom: 4rem;
 }
+
+.change-rider-status{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  color: #76838f;
+}
+.card-header{background-color: transparent;}
+
+.documentreason{
+    border: 1px solid #dee2e6;
+    padding: .5rem
+}
+
+.wallets{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
