--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -202,7 +202,7 @@
 
 // action btn
 .action-btn {
-  @apply h-6 w-6 flex flex-col items-center justify-center border border-slate-200 dark:border-slate-700 rounded;
+  @apply h-10 w-10 flex text-lg flex-col items-center justify-center border border-slate-200 dark:border-slate-700 rounded;
 }
 
 .invocie-btn {
