--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -186,15 +186,15 @@
   align-items: center;
 }
 table thead th{background-color: #f1f1f1;}
-table thead th:first-child {width: 130px;}
-.table-td, .table-th{padding-top: 1rem;padding-bottom: 1rem;}
+table thead th:first-child {width: 90px;}
+.table-td, .table-th{padding-top: .75rem;padding-bottom: .75rem;}
 .backdrop-filter {backdrop-filter: blur(4px);background-color: #00000073;}
 .onOff-riders>div {
   display: flex;
   align-items: center;
   font-size: 14px;
 }
-.onOff-riders { display: flex; align-items: center;gap: 14px;}
+.onOff-riders { display: flex; align-items: center;gap: 14px;flex-wrap: wrap;}
 .onOff-riders>div>span {
   width: 10px;
   height: 10px;
@@ -236,9 +236,10 @@ table thead th:first-child {width: 130px;}
 .change-rider-status>div>div>div>label>div{width:38px;height: 16px;}
 .change-rider-status>div>div>div>label>div>span{width:12px;height: 12px;--tw-translate-x:1.3rem}
 .mobile-view{display: none;}
-
+.all-riders {display: flex;justify-content: space-between;}
+.all-rider-mobile{display: flex;align-items: center;gap: 10px;flex-wrap: wrap;}
 
 @media (max-width:991px){
   .desktop-view-filter{display: none;}
-  .mobile-view{display: flex;}
+  .mobile-view{display: block;}
 }
