--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -247,6 +247,20 @@ width: 100%;padding: 1rem;box-shadow: 0px 0px 18px #e8e8e8;margin-bottom: 1rem;}
 .filter-show>div{display: flex;gap:10px}
 .viewdocument-frame iframe {height: 400px;}
 .export-data .MuiInputBase-formControl {height: 50px;}
+.loader-fixed {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #00000030;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rider-count{display: flex;border: 1px solid #e31e24;gap: 8px;border-radius: .25rem;padding: .5rem .5rem;align-items: center;
+  height: 40px;background-color: #e31e240f;}
 
 @media (max-width:991px){
   .desktop-view-filter{display: none;}
