--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -125,7 +125,7 @@
 }
 
 :root{
-  --primary: #0d55ea;
+  --primary: #e31e24;
 }
 .bg-warning-700 {
   --tw-bg-opacity: 1;
@@ -133,6 +133,7 @@
 }
 .btn:hover{background-color: #000;outline: 0; border-color: #000;box-shadow: none;}
 .btn-primary{ background-color: var(--primary);}
+.btn-outline-light:hover{background-color: var(--primary);color: #fff;border-color: var(--primary);}
 .react-tabs__tab-list{border-bottom: none;
   text-align: center;
   margin: 2rem 0;
@@ -263,17 +264,28 @@ width: 100%;padding: 1rem;box-shadow: 0px 0px 18px #e8e8e8;margin-bottom: 1rem;}
   height: 40px;background-color: #e31e240f;}
 .rider-datetime span {white-space: nowrap;}  
 // Progressbar
-.multistep-prgressbar ul { display: flex; gap: 20px; justify-content: space-between;}
-.multistep-prgressbar ul .multistep-list{ flex: 1;}
-.multistep-prgressbar ul .multistep-list .multistep-item {
-  cursor: pointer;position: relative;z-index: 9;padding: .75rem 1rem;
+.multistep-prgressbar ul { display: flex; gap: 15px; justify-content: space-between;}
+.multistep-prgressbar ul .multistep-list{ flex: 1;text-align: center;position: relative;}
+.multistep-prgressbar ul .multistep-list span.orderTimetaken {
+  position: absolute;
+  left: -38px;
+  background-color: #fff0f1;
+  border: 1px solid #e31e24;
+  padding: .25rem;
+  top: 0px;
+  border-radius: .15rem .25rem;
+  font-size: 12px;line-height: normal;height: auto;
 }
+.multistep-prgressbar ul .multistep-list .multistep-item {
+  cursor: pointer;position: relative;z-index: 9;padding: .35rem 1rem;text-align: left;font-size: 14px;
+}
+.multistep-prgressbar ul .multistep-list span{font-size: 12px;max-width: 120px;display: block;margin: auto;height: 42px;}
 .multistep-prgressbar .multistep-list .multistep-item:after, .multistep-prgressbar .multistep-list .multistep-item:before{
     position: absolute;
     left: 0;
     content: " ";
     width: 100%;
-    height: 50%;
+    height: 52%;
     z-index: -1;
     background-color: #f3f3f3;
 }
