--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -213,7 +213,6 @@ table thead th:first-child {width: 90px;}
 .filter-orderlist {
   display: flex;
   justify-content: center;
-  margin: 2rem 0;
 }
 .filter-orderlist .css-13lvt8g-MuiButtonBase-root-MuiRadio-root + .MuiTypography-root{
   padding: .5rem 1rem;border-radius: .5rem;
@@ -293,7 +292,8 @@ width: 100%;padding: 1rem;box-shadow: 0px 0px 18px #e8e8e8;margin-bottom: 1rem;}
 .multistep-prgressbar ul .multistep-list.active .multistep-item:after, .multistep-prgressbar ul .multistep-list.active .multistep-item:before{background-color: #e31e24;}
 .multistep-prgressbar ul .multistep-list .multistep-item:before{top: 0;transform: skew(20deg);border-radius: 0.2em 0.2em 0 0;}
 .multistep-prgressbar ul .multistep-list .multistep-item:after{  bottom: 0; transform: skew(-20deg); border-radius: 0 0 0.2em 0.2em;}
-
+.order-header{position: sticky;top: 0px;background-color: #fff;padding: 20px;box-shadow: 0px 0px 20px #f4f4f4;
+  border: 1px solid #f3f3f5; border-radius: .25rem;}
 
 @media (max-width:991px){
   .desktop-view-filter{display: none;}
