--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -330,3 +330,8 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 @media (max-width:1366px) {
   .loginwrapper .left-column h4{font-size: 32px;line-height: 38px;}
 }
+
+//new
+.error-msg{
+  color: red;
+}
