--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -193,7 +193,7 @@
 }
 table thead th{background-color: #f1f1f1;}
 table thead th:first-child {width: 90px;}
-.table-td, .table-th{padding-top: .5rem;padding-bottom: .5rem;}
+.table-td, .table-th{padding-top: .5rem;padding-bottom: .5rem;padding-left: .875rem;padding-right: .875rem;}
 .backdrop-filter {backdrop-filter: blur(4px);background-color: #00000073;}
 .onOff-riders>div {
   display: flex;
@@ -217,7 +217,9 @@ table thead th:first-child {width: 90px;}
 .MuiInputBase-formControl{height: 40px;}
 .filter-orderlist {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 .filter-orderlist .css-13lvt8g-MuiButtonBase-root-MuiRadio-root + .MuiTypography-root{
   padding: .5rem 1rem;border-radius: .5rem;
@@ -297,9 +299,9 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 .multistep-prgressbar ul .multistep-list.active .multistep-item:after, .multistep-prgressbar ul .multistep-list.active .multistep-item:before{background-color: #e31e24;}
 .multistep-prgressbar ul .multistep-list .multistep-item:before{top: 0;transform: skew(20deg);border-radius: 0.2em 0.2em 0 0;}
 .multistep-prgressbar ul .multistep-list .multistep-item:after{  bottom: 0; transform: skew(-20deg); border-radius: 0 0 0.2em 0.2em;}
-.order-header{position: sticky;top: 0px;background-color: #fff;padding: 20px;box-shadow: 0px 0px 20px #f4f4f4;
-  border: 1px solid #f3f3f5; border-radius: .25rem;}
-
+// .order-header{position: sticky;top: 0px;background-color: #fff;padding: 20px;box-shadow: 0px 0px 20px #f4f4f4;
+//   border: 1px solid #f3f3f5; border-radius: .25rem;}
+.pickup-address, .delivery-address{width: 250px;}
 @media (max-width:991px){
   .desktop-view-filter{display: none;}
   .mobile-view{display: block;}
