--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -344,3 +344,10 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
   pointer-events: none;
   opacity: .5;
 }
+
+.riderexport{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid rgb(226 232 240);
+}
