--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -348,6 +348,7 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 .riderexport{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+ // justify-content: space-between;
+  gap: 20px;
   border-top: 1px solid rgb(226 232 240);
 }
