--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -352,3 +352,12 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
   gap: 20px;
   border-top: 1px solid rgb(226 232 240);
 }
+
+.tenMinAgo{
+  background-color: #c0101033;
+  color: #fff;
+}
+
+.lightGrey{
+  background-color: #feff7857;
+}
