--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -365,3 +365,43 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 .map{
   font-size: 14px;
 }
+
+
+// Rider-Details
+
+// .rider-detail {
+//   position: relative;
+//   padding: 10px;
+//   min-width: 150px;
+// }
+
+
+// .rider-detail .close-btn {
+//   position: absolute;
+//   top: 5px;
+//   right: 5px;
+//   background: red;
+//   color: white;
+//   border: none;
+//   border-radius: 50%;
+//   width: 20px;
+//   height: 20px;
+//   font-size: 12px;
+//   cursor: pointer;
+// }
+
+// .rider-detail .rider-name {
+//   font-weight: 500;
+//   text-align: left;
+//    font-size: 16px;
+// }
+
+// .rider-detail .rider-no {
+//   text-align: left;
+//   font-size: 14px;
+//   margin-top: 5px;
+// }
+
+// button.gm-ui-hover-effect {
+//   display: none !important;
+// }
