--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -369,39 +369,8 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 
 // Rider-Details
 
-// .rider-detail {
-//   position: relative;
-//   padding: 10px;
-//   min-width: 150px;
-// }
 
-
-// .rider-detail .close-btn {
-//   position: absolute;
-//   top: 5px;
-//   right: 5px;
-//   background: red;
-//   color: white;
-//   border: none;
-//   border-radius: 50%;
-//   width: 20px;
-//   height: 20px;
-//   font-size: 12px;
-//   cursor: pointer;
-// }
-
-// .rider-detail .rider-name {
-//   font-weight: 500;
-//   text-align: left;
-//    font-size: 16px;
-// }
-
-// .rider-detail .rider-no {
-//   text-align: left;
-//   font-size: 14px;
-//   margin-top: 5px;
-// }
-
-// button.gm-ui-hover-effect {
-//   display: none !important;
-// }
+.gm-style-iw{ padding: 10px 10px 0 !important;}
+.gm-style-iw-ch{ display: none;}
+.gm-style-iw-chr button{ font-size: 10px; width: auto !important; height: auto !important; position: absolute !important; right: 10px; top: 10px; }
+.gm-style-iw-chr button span{ margin: 0px !important;}
