[Client Order ID]

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -374,3 +374,6 @@ width: 100%;padding: 1rem;margin-bottom: 1rem;}
 .gm-style-iw-ch{ display: none;}
 .gm-style-iw-chr button{ font-size: 10px; width: auto !important; height: auto !important; position: absolute !important; right: 10px; top: 10px; }
 .gm-style-iw-chr button span{ margin: 0px !important;}
+
+
+div[data-tippy-root] div{ width: auto; word-wrap: break-word;}
