[Dashboard Graph , Vehicle Setting & Corrections]

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -398,3 +398,7 @@ div[data-tippy-root] div{ width: auto; word-wrap: break-word;}
 @media (max-width: 768px) {
   .multistep-prgressbar ul .multistep-list{     flex: 100%;}
 }
+
+
+
+.graph-date-picker input{ border:1px solid #ccc;  }
