--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -402,3 +402,7 @@ div[data-tippy-root] div{ width: auto; word-wrap: break-word;}
 
 
 .graph-date-picker input{ border:1px solid #ccc;  }
+
+.export-data .form-check-input:checked {
+    background-color: #e31e24;
+  }
