[Export Order Data Excel report Fixed]

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -406,3 +406,6 @@ div[data-tippy-root] div{ width: auto; word-wrap: break-word;}
 .export-data .form-check-input:checked {
     background-color: #e31e24;
   }
+
+
+  .order-detail-list tbody td:first-child{ width: 70%;}
